@@ -1608,6 +1608,7 @@ phonebookfile = phonebook-dosbox-x.txt
 #                  openps:<program>: start a program to open the file if the print output is detected to be PostScript.
 #                  openpcl:<program>: start a program to open the file if the print output is detected to be PCL.
 #                  openwith:<program>: start a program to open the file in all other conditions.
+#                  openerror:<program>: start a program to open the file if an error had occurred.
 #                for printer:
 #                  printer still has it's own configuration section above.
 # parallel2: see parallel1
